--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,11 @@ html, body, #root{
   padding: 0;
   font-family: 'Inter', sans-serif;
   color: #212121;
+  background-color: #eeeeee
+  ;
+}
+
+.wrapper {
+  width: 32rem;
+  margin: 2rem auto;
 }
