--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,10 +1,22 @@
-.wrapper {
-  
+.post-wrapper {
+  background-color: #f5f5f5;
+  padding: 8px 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  box-shadow:
+    2.8px 0.4px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 0.9px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 1.8px 10px rgba(0, 0, 0, 0.035),
+    22.3px 3.1px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 5.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 14px 80px rgba(0, 0, 0, 0.07)
+  ;
 }
 
 .person {
   display: flex;
   flex-direction: row;
+  margin-bottom: 12px;
 }
 
 .avatar {
@@ -12,12 +24,19 @@
   height: 75px;
   width: 75px;
   border-radius: 50%;
-  border: 4px solid #bdbdbd;
+  border: 4px solid #eeeeee;
   margin-right: 12px;
+  cursor: pointer;
 }
 
 .name {
-  font-size: 20px;
+  font-size: 24px;
   height: 75px;
   line-height: 75px;
+  cursor: pointer;
+}
+
+.title {
+  font-size: 20px;
+  margin-bottom: 12px;
 }
