--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -1,6 +1,6 @@
 .post-wrapper {
   background-color: #f5f5f5;
-  padding: 8px 20px;
+  padding: 12px 20px;
   margin-bottom: 20px;
   border-radius: 8px;
   box-shadow:
@@ -11,7 +11,34 @@
     41.8px 5.8px 33.4px rgba(0, 0, 0, 0.05),
     100px 14px 80px rgba(0, 0, 0, 0.07)
   ;
+  animation: fadeIn 0.5s;
+  -webkit-animation: fadeIn 0.5s;
+  -moz-animation: fadeIn 0.5s;
+  -o-animation: fadeIn 0.5s;
+  -ms-animation: fadeIn 0.5s;
 }
+
+.controller-wrapper {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+}
+
+.btn {
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+.btn:hover, .btn:active, .btn:focus {
+  color: #bdbdbd;
+}
+
+.edit {
+  margin-right: 8px;
+}
+
 
 .person {
   display: flex;
@@ -39,4 +66,29 @@
 .title {
   font-size: 20px;
   margin-bottom: 12px;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
