Add feature adding new posts

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,18 @@ html, body, #root{
   padding: 0;
   font-family: 'Inter', sans-serif;
   color: #212121;
-  background-color: #eeeeee
-  ;
+  background-color: #eeeeee;
 }
 
 .wrapper {
   width: 32rem;
   margin: 2rem auto;
+}
+
+.new-post {
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+  padding: 12px 0;
+  margin-bottom: 12px;
 }
