--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -18,6 +18,10 @@
   -ms-animation: fadeIn 0.5s;
 }
 
+.deleting-post {
+  opacity: 0.6;
+}
+
 .controller-wrapper {
   width: 100%;
   display: flex;
@@ -29,6 +33,7 @@
   font-weight: bold;
   cursor: pointer;
   transition: all 0.5s ease-out;
+  user-select: none;
 }
 
 .btn:hover, .btn:active, .btn:focus {
@@ -43,6 +48,10 @@
   color: #b71c1c;
 }
 
+.not-allowed {
+  cursor: not-allowed;
+  pointer-events: none;
+}
 
 .person {
   display: flex;
@@ -58,6 +67,8 @@
   border: 4px solid #eeeeee;
   margin-right: 12px;
   cursor: pointer;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
 .name {
